[package]
name = "rumble-mod-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
eframe = {version = "0.31.1"}
egui_dock = "0.16.0"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = {version = "0.25.6", features = ["jpeg", "png"]}
reqwest = {version = "0.12.15", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = { version = "1.44.1", features = ["full"] }
