[package]
name = "rumble-mod-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
dirs = "6.0.0"
eframe = { version = "0.31.1" }
egui_dock = "0.16.0"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = { version = "0.25.6", features = ["jpeg", "png"] }
reqwest = { version = "0.12.15", features = ["json"] }
rust_search = "2.1.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
zip = "2.6.1"
