[package]
name = "rumm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
color-eyre = "0.6.3"
eframe = { version = "0.31.1" }
egui_dock = "0.16.0"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
reqwest = { version = "0.12.15", features = ["json"] }
rust_search = "2.1.0"
self_update = "0.42.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
zip = "2.6.1"
